# makefile for OpenSRF Python modules and scripts

all-local:
	@echo $@
	python @srcdir@/setup.py build

# ------------------------------------------------------------------------------
# INSTALL
# ------------------------------------------------------------------------------
install-data-local:
	@echo $@
	python @srcdir@/setup.py install


